# serializer/user.go
@@ -8,41 +8,34 @@ import (
 )
 
 type User struct {
-	ID        uint      `json:"id"`
-	UserName  string    `json:"user_name"`
-	NickName  string    `json:"nickname"`
-	Type      int       `json:"type"`
-	Email     string    `json:"email"`
-	Status    string    `json:"status"`
-	Avatar    string    `json:"avatar"`
-	LastLogin time.Time `json:"last_login"`
-	CreateAt  int64     `json:"create_at"`
-	Address   string    `json:"address"`
-	Biography string    `json:"biography"`
-	Phone     string    `json:"phone"`
-	Location  model.Point     `json:"location"`
+	ID        uint        `json:"id"`
+	UserName  string      `json:"username"`
+	Email     string      `json:"email"`
+	Status    string      `json:"status"`
+	Avatar    string      `json:"avatar"`
+	LastLogin time.Time   `json:"last_login"`
+	Address   string      `json:"address"`
+	Biography string      `json:"biography"`
+	Phone     string      `json:"phone"`
+	Location  model.Point `json:"location"`
+	Extra     string      `json:"xxtra"`
 }
 
 // BuildUser 序列化用户
 func BuildUser(user *model.User) *User {
 	u := &User{
 		ID:        user.ID,
-		UserName:  user.UserName,
-		NickName:  user.NickName,
+		UserName:  user.UserName,  
 		Email:     user.Email,
 		Status:    user.Status,
 		LastLogin: user.LastLogin,
 		Avatar:    config.Conf.Static.StaticHost + config.Conf.Static.StaticPort + config.Conf.Static.AvatarPath + user.AvatarURL(),
-		CreateAt:  user.CreatedAt.Unix(),
 		Address:   user.Address,
 		Biography: user.Address,
 		Phone:     user.Phone,
 		Location:  user.Location,
+		Extra: 	   user.Extra,
 	}
-
-	// if conf.UploadModel == consts.UploadModelOss {
-	// 	u.Avatar = user.Avatar
-	// }
 
 	return u
 }
